# TrainingViz

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
src/: __init__.py  anim_test.py  callback.py  train.py  trainer.py  viz.py
src/TrainingViz/: __init__.py  callback.py  trainer.py  viz.py
