[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "TrainingViz"
authors = [
    { name = "Cody Beck", email = "cbeck4228@gmail.com" },
]
description = "Visualizing training of ML models with Neuromancer"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "Deep Learning",
    "Pytorch",
]

dependencies = [
    "matplotlib",
    "numpy==1.26.0",
    "torch",
    "neuromancer"
]


version = "0.1.0"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
